--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,4 +1,12 @@
-//add everything here
+group = 'org.gradle'
+version = '1.0'
+
+repositories {
+    mavenCentral()
+}
+dependencies {
+    implementation project(':utils')
+}
 
 test {
     useJUnitPlatform()
